# openGlLearingForCPlusPlus

./: CMakeLists.txt  README.md
cmake_dic/: CMakeLists.txt
glsl/: cpp_fragment.glsl  cpp_vertex.glsl
include/glad/: glad.h
src/: MainCompare.cpp  MainDemo.cpp  MainTest.cpp  Utils.cpp  Utils.h  glad.c  main.cpp  opengl_main_texture.cpp
src/vender/: stb_image.cpp  stb_image.h
